--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ img {
 
  @media screen and (max-width: 780px) {
     .container {
-         width: 400px;
+         width: 100%;
     }
    
     .row {
@@ -161,7 +161,7 @@ img {
 
  @media screen and (min-width: 780px) {
     .container {
-        width: 760px;
+        width: 100%;
     }
 
     .row {
@@ -171,7 +171,7 @@ img {
 
  @media screen and (min-width: 1200px) {
     .container {
-        width: 1140px;
+        width: 100%;
     }
  }
 
